<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/details_head_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cath1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/details_head_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_16dp"
            android:src="@drawable/ic_public_black_24dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/details_art"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="@dimen/_16dp"
        android:text="@string/title"
        android:textSize="@dimen/_24sp" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_32dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/details_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="@dimen/_8dp"
        android:text="@string/location"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/details_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/website" />

        <TextView
            android:id="@+id/details_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/website"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>